// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should render correctly 1`] = `
<div
  className="incident-history-container-list"
>
  <div
    className="incident-history-container-list__body"
  >
    <table
      cellPadding="0"
      cellSpacing="0"
      className="incident-history-container-list__body-list"
    >
      <thead>
        <tr>
          <th
            className=""
          >
            Wanneer
          </th>
          <th
            className=""
          >
            Wat
          </th>
          <th
            className=""
          >
            Omschrijving
          </th>
          <th
            className=""
          >
            Gebruiker
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          key="UPDATE_STATUS_102798"
        >
          <td>
            09-10-2018
             om 
            13:44
          </td>
          <td>
            Update status naar: Afgehandeld
          </td>
          <td
            className="pre-wrap"
          >
            bedankt voor uw melding we komen daar morgen voor grofvuil
          </td>
          <td>
            r.poelgeest@amsterdam.nl
          </td>
        </tr>
        <tr
          key="UPDATE_PRIORITY_40551"
        >
          <td>
            09-10-2018
             om 
            13:41
          </td>
          <td>
            Prioriteit update naar: Normal
          </td>
          <td
            className="pre-wrap"
          />
          <td />
        </tr>
        <tr
          key="UPDATE_CATEGORY_ASSIGNMENT_67206"
        >
          <td>
            09-10-2018
             om 
            13:41
          </td>
          <td>
            Categorie gewijzigd naar: Grofvuil
          </td>
          <td
            className="pre-wrap"
          />
          <td />
        </tr>
        <tr
          key="UPDATE_LOCATION_40000"
        >
          <td>
            09-10-2018
             om 
            13:41
          </td>
          <td>
            Locatie gewijzigd
          </td>
          <td
            className="pre-wrap"
          />
          <td />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<List /> should render without list correctly 1`] = `
<div
  className="incident-history-container-list"
>
  <div
    className="incident-history-container-list__body"
  >
    <table
      cellPadding="0"
      cellSpacing="0"
      className="incident-history-container-list__body-list"
    >
      <thead>
        <tr>
          <th
            className=""
          >
            Wanneer
          </th>
          <th
            className=""
          >
            Wat
          </th>
          <th
            className=""
          >
            Omschrijving
          </th>
          <th
            className=""
          >
            Gebruiker
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</div>
`;
